--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,11 +2,11 @@
   <nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">about</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/about">about</a>
     </li>
   </ul>
   <form class="form-inline pull-xs-right">
